--- a/components/Inputs/Input/Input.module.css
+++ b/components/Inputs/Input/Input.module.css
@@ -4,11 +4,11 @@
 
 	transition-duration: 500ms;
 
-	color: var(--primary);
+	color: var(--primary) !important;
 	border: none;
 	border-radius: 5px;
 	outline: none;
-	background: var(--light);
+	background: var(--light) !important;
 
 	font-size: 16px;
 	font-weight: 500 !important;
