--- a/components/ProductsComponents/ProductItem/ProductItem.module.css
+++ b/components/ProductsComponents/ProductItem/ProductItem.module.css
@@ -17,7 +17,7 @@
 }
 
 .displayLines {
-	grid-template-columns: 1fr auto auto;
+	grid-template-columns: 1fr auto;
 	grid-template-rows: auto;
 
 	align-items: center;
