--- a/components/ProductsComponents/InterestingProducts/InterestingProducts.module.css
+++ b/components/ProductsComponents/InterestingProducts/InterestingProducts.module.css
@@ -18,6 +18,14 @@
 	grid-template-columns: repeat(2, 1fr);
 }
 
+.spinnerDiv {
+	display: grid;
+
+	width: 100%;
+	margin: 80px 0 120px 0;
+	justify-items: center;
+}
+
 @media (max-width: 1400px) {
 	.interestingProducts {
 		grid-template-columns: repeat(4, 1fr);
@@ -28,6 +36,10 @@
 	.interestingProducts {
 		gap: 15px;
 		grid-template-columns: repeat(3, 1fr);
+	}
+
+	.spinnerDiv {
+		margin: 60px 0 90px 0;
 	}
 }
 
@@ -40,6 +52,10 @@
 @media (max-width: 580px) {
 	.interestingProducts {
 		gap: 10px;
+	}
+
+	.spinnerDiv {
+		margin: 40px 0 60px 0;
 	}
 }
 
