--- a/components/ProductsComponents/ProductItem/ProductItem.module.css
+++ b/components/ProductsComponents/ProductItem/ProductItem.module.css
@@ -47,8 +47,13 @@
 	gap: 5px;
 }
 
-.productName {
+.productNameDiv > div {
 	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.productName {
+	display: -webkit-box;
 	overflow: hidden;
 
 	transition-duration: 300ms;
@@ -59,7 +64,6 @@
 	color: var(--primary);
 
 	font-weight: 600;
-	grid-template-columns: 1fr;
 	-webkit-line-clamp: 2;
 	line-clamp: 2;
 	-webkit-box-orient: vertical;
@@ -144,11 +148,12 @@
 		grid-template-columns: auto;
 	}
 
-	.productName {
+	.productNameDiv > div {
 		align-items: start;
 
 		width: 100%;
 		grid-template-columns: 1fr auto;
+
 		gap: 15px;
 	}
 
