main block update && add contacts

--- a/components/Common/Footer/Footer.module.css
+++ b/components/Common/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
 	display: grid;
-	align-items: start;
+	align-items: center;
 	align-self: end;
 
 	width: calc(100% - 160px);
@@ -9,7 +9,7 @@
 
 	background: var(--white);
 	gap: 40px;
-	grid-template-columns: auto auto auto 1fr;
+	grid-template-columns: auto auto auto auto 1fr;
 }
 
 .footerText,
@@ -56,19 +56,28 @@
 	}
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
 	.footer {
 		gap: 30px;
 
 		width: calc(100% - 120px);
 		padding: 30px 60px;
+		grid-template-columns: auto auto auto 1fr;
+	}
+
+	.bananaLink {
+		justify-self: start;
 	}
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1024px) {
 	.footer {
 		gap: 20px;
+	}
+}
 
+@media (max-width: 900px) {
+	.footer {
 		width: calc(100% - 80px);
 		padding: 20px 40px;
 		grid-template-columns: auto;
@@ -76,7 +85,6 @@
 
 	.bananaLink {
 		margin-top: 20px;
-		justify-self: start;
 	}
 }
 
