--- a/components/MainComponents/MainProductList/MainProductList.module.css
+++ b/components/MainComponents/MainProductList/MainProductList.module.css
@@ -38,10 +38,10 @@
 
 @media (max-width: 800px) {
 	.productList {
-		grid-template-columns: repeat(2, 1fr);
-
 		width: calc(100% - 80px);
+		margin: 20px 0;
 		padding: 0 40px;
+		grid-template-columns: repeat(2, 1fr);
 	}
 }
 
@@ -50,7 +50,7 @@
 		gap: 10px;
 
 		width: calc(100% - 40px);
-		margin: 20px 0;
+		margin: 10px 0 20px 0;
 		padding: 0 20px;
 	}
 
