--- a/page_components/MainPage/MainPage.module.css
+++ b/page_components/MainPage/MainPage.module.css
@@ -8,31 +8,31 @@
 }
 
 .productTitle {
-	margin: 40px 80px 0 80px !important;
+	margin: 0 80px !important;
 
 	color: var(--primary) !important;
 }
 
 @media (max-width: 1024px) {
 	.productTitle {
-		margin: 30px 60px 0 60px !important;
+		margin: 0 60px !important;
 	}
 }
 
 @media (max-width: 800px) {
 	.productTitle {
-		margin: 20px 40px 0 40px !important;
+		margin: 0 40px !important;
 	}
 }
 
 @media (max-width: 580px) {
 	.productTitle {
-		margin: 20px 20px 0 20px !important;
+		margin: 20px !important;
 	}
 }
 
 @media (max-width: 300px) {
 	.productTitle {
-		margin: 20px 10px 0 10px !important;
+		margin: 10px !important;
 	}
 }
