--- a/components/ProfileComponents/UserCompanyInfo/UserCompanyInfo.module.css
+++ b/components/ProfileComponents/UserCompanyInfo/UserCompanyInfo.module.css
@@ -5,7 +5,12 @@
 }
 
 .userCompanyInfo > h1 {
+	overflow: hidden;
+
 	max-width: 500px;
+
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .infoTitle {
